[gd_scene load_steps=7 format=3 uid="uid://dfa4a3livjsy0"]

[ext_resource type="Texture2D" uid="uid://8mf3v08lmirn" path="res://Tiles/tile_0118.png" id="1_ls3fr"]
[ext_resource type="Script" path="res://Scripts/Bow.gd" id="2_prj8x"]
[ext_resource type="Script" path="res://Scripts/Arrow.gd" id="3_6oowl"]
[ext_resource type="Texture2D" uid="uid://du1yohx7iwbre" path="res://Tiles/tile_0119.png" id="4_2wf6p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lffpl"]
radius = 5.0
height = 20.0

[sub_resource type="PackedScene" id="PackedScene_rj545"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Arrow", "RigidBody2D", "collision_layer", "collision_mask", "gravity_scale", "lock_rotation", "script", "speed", "CollisionShape2D", "CollisionShape2D", "position", "shape", "ArrowSprite", "Sprite2D", "rotation", "texture"),
"node_count": 3,
"node_paths": [NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 6, 2, 0, 3, 1, 4, 2, 5, 3, 6, 4, 7, 5, 0, 1073741824, 0, 9, 8, -1, 2, 10, 6, 11, 7, 0, 1073741825, 0, 13, 12, -1, 2, 14, 8, 15, 9, 0),
"variants": [8, 2, 0.0, true, ExtResource("3_6oowl"), 300, Vector2(-0.292893, -0.707107), SubResource("CapsuleShape2D_lffpl"), -0.785398, ExtResource("4_2wf6p")],
"version": 3
}

[node name="Bow" type="Sprite2D"]
texture = ExtResource("1_ls3fr")
script = ExtResource("2_prj8x")
arrow = SubResource("PackedScene_rj545")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="attack_initiated" from="." to="." method="_on_attack_initiated"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
